hphp/test/zend/good/ext/pdo_sqlite/tests/bug46139.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('pdo_sqlite')) print 'skip not loaded';
}
